--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Personal &mdash; Free HTML5 Bootstrap Website Template by FreeHTML5.co</title>
+	<title>Keita KUKI</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -69,6 +69,7 @@
 				<li><a href="#" data-tab="2"><span class="icon icon-graduation-cap"></span><span class="menu-text">Education</span></a></li>
 				<li><a href="#" data-tab="3"><span class="icon icon-black-tie"></span><span class="menu-text">Experience</span></a></li>
 				<li><a href="#" data-tab="4" data-pie="yes"><span class="icon icon-fighter-jet"></span><span class="menu-text">Skills</span></a></li>
+				<li><a href="#" data-tab="5"><span class="icon icon-fighter-jet"></span><span class="menu-text">Works</span></a></li>
 			</ul>
 			<div class="fh5co-tab-content active" data-content="1">
 				<div class="fh5co-content-inner text-center">
@@ -77,8 +78,8 @@
 							<figure>
 								<img src="images/profile_img.png" alt="Free HTML5 Wesbite Template by FreeHTML5.co">
 							</figure>
-							<h1>Claire Aguilar</h1>
-							<p>Born and raised in <a href="#">Brooklyn</a>. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the <a href="#">Semantics</a>, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
+							<h1>Keita Kuki</h1>
+							<p>introduction Some text</p>
 						</div>
 					</div>
 					<div class="row">
@@ -91,11 +92,11 @@
 						</div>
 					</div>
 					<ul class="fh5co-social">
-						<li><a href="#"><i class="icon-envelope"></i></a></li>
+						<!-- <li><a href="#"><i class="icon-envelope"></i></a></li> -->
 						<li><a href="#"><i class="icon-twitter"></i></a></li>
 						<li><a href="#"><i class="icon-instagram"></i></a></li>
-						<li><a href="#"><i class="icon-google"></i></a></li>
-						<li><a href="#"><i class="icon-linkedin"></i></a></li>
+						<!-- <li><a href="#"><i class="icon-google"></i></a></li> -->
+						<!-- <li><a href="#"><i class="icon-linkedin"></i></a></li> -->
 					</ul>
 				</div>
 			</div>
@@ -103,7 +104,7 @@
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<p></p>
 
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
@@ -211,6 +212,40 @@
 							<div class="chart" data-percent="90"><span><strong>AngularJS</strong>90%</span></div>
 						</div>
 
+					</div>
+				</div>
+			</div>
+			<div class="fh5co-tab-content" data-content="5">
+				<div class="fh5co-content-inner">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="fh5co-gallery">
+								<a class="gallery-item" href="single.html">
+									<img src="images/whale2.jpeg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+									<span class="overlay">
+										<h2>Nature</h2>
+										<span>14 Photos</span>
+									</span>
+								</a>
+								<p>Far far away, behind the word mountains, far from the countries.</p>
+								<a class="gallery-item" href="single.html">
+									<img src="images/whale2.jpeg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+									<span class="overlay">
+										<h2>People</h2>
+										<span>7 Photos</span>
+									</span>
+								</a>
+								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+								<a class="gallery-item" href="single.html">
+									<img src="images/whale2.jpeg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+									<span class="overlay">
+										<h2>Sky</h2>
+										<span>22 Photos</span>
+									</span>
+								</a>
+								<p>Far far away, behind the word mountains, far from the countries.</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
