--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<li><a href="#" data-tab="2"><span class="icon icon-graduation-cap"></span><span class="menu-text">Education</span></a></li>
 				<li><a href="#" data-tab="3"><span class="icon icon-black-tie"></span><span class="menu-text">Experience</span></a></li>
 				<li><a href="#" data-tab="4" data-pie="yes"><span class="icon icon-fighter-jet"></span><span class="menu-text">Skills</span></a></li>
-				<li><a href="#" data-tab="5"><span class="icon icon-fighter-jet"></span><span class="menu-text">Works</span></a></li>
+				<li><a href="#" data-tab="5"><span class="icon icon-hourglass-o"></span><span class="menu-text">Works</span></a></li>
 			</ul>
 			<div class="fh5co-tab-content active" data-content="1">
 				<div class="fh5co-content-inner text-center">
@@ -111,8 +111,8 @@
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2001-2004</h2>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
+									<h2>2011-2014</h2>
+									<p>筑波大学附属駒場高等学校</p>
 								</div>
 							</div>
 
@@ -121,8 +121,8 @@
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2004-2008</h2>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
+									<h2>2014-2016</h2>
+									<p>東京大学理科二類</p>
 								</div>
 							</div>
 
@@ -131,8 +131,18 @@
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2008-2012</h2>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
+									<h2>2016-2018</h2>
+									<p>東京大学工学部 システム創成学科PSIコース</p>
+								</div>
+							</div>
+
+							<div class="fh5co-feature">
+								<div class="fh5co-icon">
+									<i class="icon-graduation-cap"></i>
+								</div>
+								<div class="fh5co-text">
+									<h2>2018-present</h2>
+									<p>東京大学大学院 学際情報学府先端表現情報学コース 苗村研究室</p>
 								</div>
 							</div>
 
