fix profile size

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<div class="row row-bottom-padded-sm">
 						<div class="col-md-12">
 							<figure>
-								<img src="images/profile_img.png" alt="Free HTML5 Wesbite Template by FreeHTML5.co">
+								<img src="images/profile_img.png" alt="profile_img" width="80%">
 							</figure>
 							<h1>Keita Kuki</h1>
 							<p>introduction Some text</p>
