--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 					</div>
 					<ul class="fh5co-social">
 						<!-- <li><a href="#"><i class="icon-envelope"></i></a></li> -->
-						<li><a href="#"><i class="icon-twitter"></i></a></li>
-						<li><a href="#"><i class="icon-instagram"></i></a></li>
+						<li><a href="https://twitter.com/keitakuki"><i class="icon-twitter"></i></a></li>
+						<li><a href="https://www.instagram.com/keita.cookie/"><i class="icon-instagram"></i></a></li>
 						<!-- <li><a href="#"><i class="icon-google"></i></a></li> -->
 						<!-- <li><a href="#"><i class="icon-linkedin"></i></a></li> -->
 					</ul>
