--- a/index.html
+++ b/index.html
@@ -156,16 +156,30 @@
 					<div class="row">
 						<div class="col-md-12">
 
-							<p>I have the privilege to work with these cool companies.</p>
-
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
 									<i class="icon-black-tie"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2008 - Present</h2>
-									<h3>XYZ Inc.</h3>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
+									<h2>2017-2018</h2>
+									<h3>Candle inc.</h3>
+									<p>
+										As a Engineer<br>
+										iOS APP, API server, DB management, log tracking
+									</p>
+								</div>
+							</div>
+							
+							<div class="fh5co-feature">
+								<div class="fh5co-icon">
+									<i class="icon-black-tie"></i>
+								</div>
+								<div class="fh5co-text">
+									<h2>2016-2016</h2>
+									<h3><a href="https://life-is-tech.com/">Life is Tech!</a></h3>
+									<p>
+										As a Web service course mentor
+									</p>
 								</div>
 							</div>
 
@@ -174,23 +188,15 @@
 									<i class="icon-black-tie"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2004-2008</h2>
-									<h3>Previous Ltd Co.</h3>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
+									<h2>2014-present</h2>
+									<h3>Tutor</h3>
+									<p>
+										The number of students: 5<br>
+										Subject: Math, Science, Programming<br>
+										Achievements: Azabu High School, etc.
+									</p>
 								</div>
 							</div>
-
-							<div class="fh5co-feature">
-								<div class="fh5co-icon">
-									<i class="icon-black-tie"></i>
-								</div>
-								<div class="fh5co-text">
-									<h2>1999-2004</h2>
-									<h3>Previous Ltd Co.</h3>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
-								</div>
-							</div>
-
 						</div>
 						
 					</div>
