--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
 								</div>
 								<div class="fh5co-text">
 									<h2>2011-2014</h2>
-									<p>筑波大学附属駒場高等学校</p>
+									<p>
+										Senior High School at Komaba, University of Tsukuba<br>
+										筑波大学附属駒場高等学校
+									</p>
 								</div>
 							</div>
 
@@ -122,7 +125,11 @@
 								</div>
 								<div class="fh5co-text">
 									<h2>2014-2016</h2>
-									<p>東京大学理科二類</p>
+									<p>
+										Natural Sciences II<br>
+										The University of Tokyo<br>
+										東京大学理科二類
+									</p>
 								</div>
 							</div>
 
@@ -132,7 +139,13 @@
 								</div>
 								<div class="fh5co-text">
 									<h2>2016-2018</h2>
-									<p>東京大学工学部 システム創成学科PSIコース</p>
+									<p>
+										PSI Course<br>
+										Department of Systems Innovation<br>
+										Faculty of Engineering<br>
+										The University of Tokyo<br>
+										東京大学工学部 システム創成学科PSIコース
+									</p>
 								</div>
 							</div>
 
@@ -142,7 +155,13 @@
 								</div>
 								<div class="fh5co-text">
 									<h2>2018-present</h2>
-									<p>東京大学大学院 学際情報学府先端表現情報学コース 苗村研究室</p>
+									<p>
+										<a href="http://www.nae-lab.org/">Naemura Lab</a><br>
+										Emerging Design and Informatics Course<br>
+										Graduate School of Interdisciplinary Information Studies<br>
+										The University of Tokyo<br>
+										東京大学大学院 学際情報学府 先端表現情報学コース 苗村研究室
+									</p>
 								</div>
 							</div>
 
@@ -169,7 +188,7 @@
 									</p>
 								</div>
 							</div>
-							
+
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
 									<i class="icon-black-tie"></i>
