--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<li><a href="#" data-tab="2"><span class="icon icon-graduation-cap"></span><span class="menu-text">Education</span></a></li>
 				<li><a href="#" data-tab="3"><span class="icon icon-black-tie"></span><span class="menu-text">Experience</span></a></li>
 				<li><a href="#" data-tab="4" data-pie="yes"><span class="icon icon-fighter-jet"></span><span class="menu-text">Skills</span></a></li>
-				<li><a href="#" data-tab="5"><span class="icon icon-hourglass-o"></span><span class="menu-text">Works</span></a></li>
+				<li><a href="#" data-tab="5"><span class="icon icon-book-open"></span><span class="menu-text">Works</span></a></li>
 			</ul>
 			<div class="fh5co-tab-content active" data-content="1">
 				<div class="fh5co-content-inner text-center">
@@ -183,7 +183,7 @@
 									<h2>2017-2018</h2>
 									<h3>Candle inc.</h3>
 									<p>
-										As a Engineer<br>
+										Engineer<br>
 										iOS APP, API server, DB management, log tracking
 									</p>
 								</div>
@@ -197,7 +197,8 @@
 									<h2>2016-2016</h2>
 									<h3><a href="https://life-is-tech.com/">Life is Tech!</a></h3>
 									<p>
-										As a Web service course mentor
+										Mentor<br>
+										Web Service Course
 									</p>
 								</div>
 							</div>
@@ -228,25 +229,26 @@
 							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="95"><span><strong>HTML5</strong>95%</span></div>
+							<div class="chart" data-percent="95"><span><strong>Swift</strong>95%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="93"><span><strong>CSS3</strong>93%</span></div>
+							<div class="chart" data-percent="95"><span><strong>Python</strong>95%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="90"><span><strong>jQuery</strong>90%</span></div>
-						</div>
-
-						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="89"><span><strong>PHP</strong>89%</span></div>
+							<div class="chart" data-percent="90"><span><strong>Processing</strong>90%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="85"><span><strong>MySQL</strong>85%</span></div>
+							<div class="chart" data-percent="85"><span><strong>Node.js</strong>85%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="90"><span><strong>AngularJS</strong>90%</span></div>
+							<div class="chart" data-percent="90"><span><strong>SQL</strong>90%</span></div>
 						</div>
-
+						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
+							<div class="chart" data-percent="70"><span><strong>Unity</strong>70%</span></div>
+						</div>
+						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
+							<div class="chart" data-percent="95"><span><strong>Drawing</strong>95%</span></div>
+						</div>
 					</div>
 				</div>
 			</div>
