--- a/index.html
+++ b/index.html
@@ -264,7 +264,11 @@
 										<span>14 Photos</span>
 									</span>
 								</a>
-								<p>Far far away, behind the word mountains, far from the countries.</p>
+								<div class="fh5co-text">
+									<h2>title whale</h2>
+									<p>Far far away, behind the word mountains, far from the countries.</p>
+								</div>
+
 								<a class="gallery-item" href="single.html">
 									<img src="images/whale2.jpeg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 									<span class="overlay">
@@ -272,7 +276,6 @@
 										<span>7 Photos</span>
 									</span>
 								</a>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 								<a class="gallery-item" href="single.html">
 									<img src="images/whale2.jpeg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 									<span class="overlay">
@@ -280,7 +283,6 @@
 										<span>22 Photos</span>
 									</span>
 								</a>
-								<p>Far far away, behind the word mountains, far from the countries.</p>
 							</div>
 						</div>
 					</div>
