--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
 	<div id="fh5co-main">
 		<div class="fh5co-tab-wrap">
 			<ul class="fh5co-tab-menu">
-				<li class="active"><a href="#" data-tab="1"><span class="icon icon-glass"></span><span class="menu-text">Profile</span></a></li>
-				<li><a href="#" data-tab="2"><span class="icon icon-graduation-cap"></span><span class="menu-text">Education</span></a></li>
-				<li><a href="#" data-tab="3"><span class="icon icon-black-tie"></span><span class="menu-text">Experience</span></a></li>
-				<li><a href="#" data-tab="4" data-pie="yes"><span class="icon icon-fighter-jet"></span><span class="menu-text">Skills</span></a></li>
-				<li><a href="#" data-tab="5"><span class="icon icon-book-open"></span><span class="menu-text">Works</span></a></li>
+				<li class="active"><a href="#" data-tab="1"><span class="icon icon-male"></span><span class="menu-text">Profile</span></a></li>
+				<li><a href="#" data-tab="2"><span class="icon icon-codepen"></span><span class="menu-text">Works</span></a></li>
+				<li><a href="#" data-tab="3"><span class="icon icon-graduation-cap"></span><span class="menu-text">Education</span></a></li>
+				<li><a href="#" data-tab="4"><span class="icon icon-black-tie"></span><span class="menu-text">Experience</span></a></li>
+				<li><a href="#" data-tab="5" data-pie="yes"><span class="icon icon-keyboard-o"></span><span class="menu-text">Skills</span></a></li>
 			</ul>
+
+			<!-- profile -->
 			<div class="fh5co-tab-content active" data-content="1">
 				<div class="fh5co-content-inner text-center">
 					<div class="row row-bottom-padded-sm">
@@ -100,7 +102,47 @@
 					</ul>
 				</div>
 			</div>
+
+			<!-- works -->
 			<div class="fh5co-tab-content" data-content="2">
+				<div class="fh5co-content-inner">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="fh5co-gallery">
+								<a class="gallery-item" href="single.html">
+									<img src="images/whale2.jpeg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+									<span class="overlay">
+										<h2>Nature</h2>
+										<span>14 Photos</span>
+									</span>
+								</a>
+								<div class="fh5co-text">
+									<h2>title whale</h2>
+									<p>Far far away, behind the word mountains, far from the countries.</p>
+								</div>
+
+								<a class="gallery-item" href="single.html">
+									<img src="images/whale2.jpeg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+									<span class="overlay">
+										<h2>People</h2>
+										<span>7 Photos</span>
+									</span>
+								</a>
+								<a class="gallery-item" href="single.html">
+									<img src="images/whale2.jpeg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+									<span class="overlay">
+										<h2>Sky</h2>
+										<span>22 Photos</span>
+									</span>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<!-- education -->
+			<div class="fh5co-tab-content" data-content="3">
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
@@ -170,7 +212,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="fh5co-tab-content" data-content="3">
+
+			<!-- experience -->
+			<div class="fh5co-tab-content" data-content="4">
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
@@ -222,7 +266,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="fh5co-tab-content" data-content="4">
+
+			<!-- skills -->
+			<div class="fh5co-tab-content" data-content="5">
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
@@ -252,42 +298,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="fh5co-tab-content" data-content="5">
-				<div class="fh5co-content-inner">
-					<div class="row">
-						<div class="col-md-12">
-							<div class="fh5co-gallery">
-								<a class="gallery-item" href="single.html">
-									<img src="images/whale2.jpeg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-									<span class="overlay">
-										<h2>Nature</h2>
-										<span>14 Photos</span>
-									</span>
-								</a>
-								<div class="fh5co-text">
-									<h2>title whale</h2>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
-								</div>
 
-								<a class="gallery-item" href="single.html">
-									<img src="images/whale2.jpeg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-									<span class="overlay">
-										<h2>People</h2>
-										<span>7 Photos</span>
-									</span>
-								</a>
-								<a class="gallery-item" href="single.html">
-									<img src="images/whale2.jpeg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-									<span class="overlay">
-										<h2>Sky</h2>
-										<span>22 Photos</span>
-									</span>
-								</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
 		</div>
 		<footer id="fh5co-footer">
 			<div class="row">
