move sns list to footter

--- a/index.html
+++ b/index.html
@@ -93,13 +93,6 @@
 							</div>
 						</div>
 					</div>
-					<ul class="fh5co-social">
-						<!-- <li><a href="#"><i class="icon-envelope"></i></a></li> -->
-						<li><a href="https://twitter.com/keitakuki"><i class="icon-twitter"></i></a></li>
-						<li><a href="https://www.instagram.com/keita.cookie/"><i class="icon-instagram"></i></a></li>
-						<!-- <li><a href="#"><i class="icon-google"></i></a></li> -->
-						<!-- <li><a href="#"><i class="icon-linkedin"></i></a></li> -->
-					</ul>
 				</div>
 			</div>
 
@@ -303,6 +296,14 @@
 		<footer id="fh5co-footer">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center">
+					<ul class="fh5co-social">
+						<!-- <li><a href="#"><i class="icon-envelope"></i></a></li> -->
+						<li><a href="https://twitter.com/keitakuki"><i class="icon-twitter"></i></a></li>
+						<li><a href="https://www.instagram.com/keita.cookie/"><i class="icon-instagram"></i></a></li>
+						<li><a href="https://github.com/Keita-Kuki"><i class="icon-github"></i></a></li>
+						<!-- <li><a href="#"><i class="icon-google"></i></a></li> -->
+						<!-- <li><a href="#"><i class="icon-linkedin"></i></a></li> -->
+					</ul>
 					<small>
 						&copy; 2016 Personal Free HTML5 Template. All Rights Reserved. <span class="fh5co-author">
 						Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a></span>
