add drawing detail page

--- a/index.html
+++ b/index.html
@@ -102,32 +102,68 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="fh5co-gallery">
-								<a class="gallery-item" href="single.html">
-									<img src="images/whale2.jpeg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-									<span class="overlay">
-										<h2>Nature</h2>
-										<span>14 Photos</span>
-									</span>
-								</a>
-								<div class="fh5co-text">
-									<h2>title whale</h2>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
+								<div class="custom-fh5co-tab-transition">
+									<a class="gallery-item" data-tab="6" href="#">
+										<img src="images/works/drawing/whale.jpg" alt="drawing">
+										<span class="overlay">
+											<h2>Drawing</h2>
+											<span>I draw elaborate, colorful and geometric picture only using pen. These are my works I draw when I feel like it.</span>
+										</span>
+									</a>
 								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 
-								<a class="gallery-item" href="single.html">
-									<img src="images/whale2.jpeg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-									<span class="overlay">
-										<h2>People</h2>
-										<span>7 Photos</span>
-									</span>
-								</a>
-								<a class="gallery-item" href="single.html">
-									<img src="images/whale2.jpeg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-									<span class="overlay">
-										<h2>Sky</h2>
-										<span>22 Photos</span>
-									</span>
-								</a>
+			<!-- works detail drawing-->
+			<div class="fh5co-tab-content" data-content="6">
+				<div class="fh5co-content-inner">
+					<div class="row">
+						<div class="col-md-12">
+							<h2>Drawing</h2>
+							<p>I draw elaborate, colorful and geometric picture only using pen. These are my works I draw when I feel like it.</p>
+							<div class="fh5co-gallery">
+								<div class="gallery-item">
+									<img src="images/works/drawing/whale.jpg" alt="whale">
+								</div>
+								<div class="gallery-item">
+									<img src="images/works/drawing/lion.jpg" alt="lion">
+								</div>
+								<div class="gallery-item">
+									<img src="images/works/drawing/hummingbird.jpg" alt="hummingbird">
+								</div>
+								<div class="gallery-item">
+									<img src="images/works/drawing/lion_polygons.jpg" alt="lion_polygons">
+								</div>	
+								<div class="gallery-item">
+									<img src="images/works/drawing/tiger.jpg" alt="tiger">
+								</div>	
+								<div class="gallery-item">
+									<img src="images/works/drawing/wolf.jpg" alt="wolf">
+								</div>								
+								<div class="gallery-item">
+									<img src="images/works/drawing/impala.jpg" alt="impala">
+								</div>	
+								<div class="gallery-item">
+									<img src="images/works/drawing/horse.jpg" alt="horse">
+								</div>	
+								<div class="gallery-item">
+									<img src="images/works/drawing/deer.jpg" alt="deer">
+								</div>	
+								<div class="gallery-item">
+									<img src="images/works/drawing/serpentarius.jpg" alt="serpentarius">
+								</div>	
+								<div class="gallery-item">
+									<img src="images/works/drawing/women_mechanical.jpg" alt="women_mechanical">
+								</div>
+								<div class="gallery-item">
+									<img src="images/works/drawing/wolf_howling.jpg" alt="wolf_howling">
+								</div>	
+								<div class="gallery-item">
+									<img src="images/works/drawing/skull_snake.jpg" alt="skull_snake">
+								</div>	
 							</div>
 						</div>
 					</div>
@@ -265,7 +301,6 @@
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
 							<div class="chart" data-percent="95"><span><strong>Swift</strong>95%</span></div>
@@ -291,7 +326,6 @@
 					</div>
 				</div>
 			</div>
-
 		</div>
 		<footer id="fh5co-footer">
 			<div class="row">
