--- a/index.html
+++ b/index.html
@@ -81,10 +81,18 @@
 								<img src="images/profile_img.png" alt="profile_img" width="80%">
 							</figure>
 							<h1>Keita Kuki</h1>
-							<p>introduction Some text</p>
+							<p>
+								Born in Tokyo, Japan<br>
+								Graduate student of the University of Tokyo<br>
+								Majoring: Interdisciplinary Information
+							</p>
+							<p>
+								Interest<br>
+								Fashion, Drawing, Codeing, Media Art, Machine Learning, HCI
+							</p>
 						</div>
 					</div>
-					<div class="row">
+					<!-- <div class="row">
 						<div class="col-md-12 fh5co-counter">
 							<div class="fh5co-number fh5co-left">10</div>
 							<div class="fh5co-text">
@@ -92,7 +100,7 @@
 								<p>Far far away, behind the word mountains, far from the countries.</p>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 
@@ -128,7 +136,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<h2>Drawing</h2>
-							<p>When I feel like drawing. Written with pen only.</p>
+							<p>Written with pen only.</p>
 							<div class="fh5co-gallery">
 								<div class="gallery-item">
 									<img src="images/works/drawing/whale.jpg" alt="whale">
@@ -311,7 +319,7 @@
 								</div>
 								<div class="fh5co-text">
 									<h2>2016-2016</h2>
-									<h3><a href="https://life-is-tech.com/">Life is Tech!</a></h3>
+									<h3>Life is Tech!</h3>
 									<p>
 										Mentor<br>
 										Web Service Course
