--- a/index.html
+++ b/index.html
@@ -191,7 +191,10 @@
 							<h2>Interative art of body movement</h2>
 							
 							<div class="fh5co-gallery">
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/JT8pedftKfs" frameborder="0" allow="autoplay; 	encrypted-media"></iframe>
+								<div class="iframe-wrap">
+									<iframe src="https://www.youtube.com/embed/JT8pedftKfs" frameborder="0" allow="autoplay"></iframe>
+								</div>
+
 								<p>Interative art of body movement by using Kinect and Processing exhibited in The 90th May Festival of the University of Tokyo</p>
 
 								<div class="gallery-item">
