add fractal detail page

--- a/index.html
+++ b/index.html
@@ -121,7 +121,14 @@
 									<img src="images/works/kinect_processing/particles.png" alt="particles">
 									<span class="overlay">
 										<h2>Interative art of body movement</h2>
-										<span>Interative art of body movement by using Kinect and Processing exhibited in The 90th May Festival of the University of Tokyo</span>
+										<span>by Kinect and Processing</span>
+									</span>
+								</a>
+								<a class="gallery-item" data-tab="8" href="#">
+									<img src="images/works/fractal/fractal_3.jpeg" alt="fractal">
+									<span class="overlay">
+										<h2>Fractal</h2>
+										<span>by Processing</span>
 									</span>
 								</a>
 							</div>
@@ -195,7 +202,7 @@
 									<iframe src="https://www.youtube.com/embed/JT8pedftKfs" frameborder="0" allow="autoplay"></iframe>
 								</div>
 
-								<p>Interative art of body movement by using Kinect and Processing exhibited in The 90th May Festival of the University of Tokyo</p>
+								<p>Interative art of body movement by Kinect and Processing exhibited in The 90th May Festival of the University of Tokyo</p>
 
 								<div class="gallery-item">
 									<img src="images/works/kinect_processing/reconstruction.png" alt="reconstruction">
@@ -218,6 +225,62 @@
 								<h2>Trails</h2>
 								<p>Trails are drawn along with your hands movement. You can charge power by stopping motion, then you can spout it as beams.</p>
 								
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<!-- works detail fractal-->
+			<div class="fh5co-tab-content" data-content="8">
+				<div class="fh5co-content-inner">
+					<div class="row">
+						<div class="col-md-12">
+							<h2>Fractal</h2>
+							<p>by Processing</p>
+							<div class="fh5co-gallery">
+								<div class="iframe-wrap">
+									<iframe src="https://www.youtube.com/embed/4saaxVaMrd8" frameborder="0" allow="autoplay"></iframe>
+								</div>
+								<div class="gallery-item">
+									<img src="images/works/fractal/fractal_1.jpeg" alt="fractal_1">
+								</div>
+								<div class="gallery-item">
+									<img src="images/works/fractal/fractal_2.jpeg" alt="fractal_2">
+								</div>
+								<div class="gallery-item">
+									<img src="images/works/fractal/fractal_3.jpeg" alt="fractal_3">
+								</div>
+								<div class="gallery-item">
+									<img src="images/works/fractal/fractal_4.jpeg" alt="fractal_4">
+								</div>
+								<div class="gallery-item">
+									<img src="images/works/fractal/fractal_5.jpeg" alt="fractal_5">
+								</div>
+								<div class="gallery-item">
+									<img src="images/works/fractal/fractal_6.jpeg" alt="fractal_6">
+								</div>
+								<div class="gallery-item">
+									<img src="images/works/fractal/fractal_7.jpeg" alt="fractal_7">
+								</div>
+								<div class="gallery-item">
+									<img src="images/works/fractal/fractal_8.jpeg" alt="fractal_8">
+								</div>
+								<div class="gallery-item">
+									<img src="images/works/fractal/fractal_9.jpeg" alt="fractal_9">
+								</div>
+								<div class="gallery-item">
+									<img src="images/works/fractal/fractal_10.jpeg" alt="fractal_10">
+								</div>
+								<div class="gallery-item">
+									<img src="images/works/fractal/fractal_11.jpeg" alt="fractal_11">
+								</div>
+								<div class="gallery-item">
+									<img src="images/works/fractal/fractal_12.jpeg" alt="fractal_12">
+								</div>
+								<div class="gallery-item">
+									<img src="images/works/fractal/fractal_13.jpeg" alt="fractal_13">
+								</div>
 							</div>
 						</div>
 					</div>
