--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
 	<div id="fh5co-main">
 		<div class="fh5co-tab-wrap">
 			<ul class="fh5co-tab-menu">
-				<li class="active"><a href="#" data-tab="1"><span class="icon icon-male"></span><span class="menu-text">Profile</span></a></li>
-				<li><a href="#" data-tab="2"><span class="icon icon-codepen"></span><span class="menu-text">Works</span></a></li>
-				<li><a href="#" data-tab="3"><span class="icon icon-graduation-cap"></span><span class="menu-text">Education</span></a></li>
-				<li><a href="#" data-tab="4"><span class="icon icon-black-tie"></span><span class="menu-text">Experience</span></a></li>
-				<li><a href="#" data-tab="5" data-pie="yes"><span class="icon icon-keyboard-o"></span><span class="menu-text">Skills</span></a></li>
+				<li class="active"><a href="#" data-tab="profile"><span class="icon icon-male"></span><span class="menu-text">Profile</span></a></li>
+				<li><a href="#" data-tab="works"><span class="icon icon-codepen"></span><span class="menu-text">Works</span></a></li>
+				<li><a href="#" data-tab="education"><span class="icon icon-graduation-cap"></span><span class="menu-text">Education</span></a></li>
+				<li><a href="#" data-tab="experience"><span class="icon icon-black-tie"></span><span class="menu-text">Experience</span></a></li>
+				<li><a href="#" data-tab="skills" data-pie="yes"><span class="icon icon-keyboard-o"></span><span class="menu-text">Skills</span></a></li>
 			</ul>
 
 			<!-- profile -->
-			<div class="fh5co-tab-content active" data-content="1">
+			<div class="fh5co-tab-content active" data-content="profile">
 				<div class="fh5co-content-inner text-center">
 					<div class="row row-bottom-padded-sm">
 						<div class="col-md-12">
@@ -105,7 +105,7 @@
 			</div>
 
 			<!-- works -->
-			<div class="fh5co-tab-content" data-content="2">
+			<div class="fh5co-tab-content" data-content="works">
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
@@ -339,7 +339,7 @@
 			</div>
 
 			<!-- education -->
-			<div class="fh5co-tab-content" data-content="3">
+			<div class="fh5co-tab-content" data-content="education">
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
@@ -411,7 +411,7 @@
 			</div>
 
 			<!-- experience -->
-			<div class="fh5co-tab-content" data-content="4">
+			<div class="fh5co-tab-content" data-content="experience">
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
@@ -465,7 +465,7 @@
 			</div>
 
 			<!-- skills -->
-			<div class="fh5co-tab-content" data-content="5">
+			<div class="fh5co-tab-content" data-content="skills">
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
