--- a/index.html
+++ b/index.html
@@ -500,6 +500,7 @@
 				<div class="col-md-6 col-md-offset-3 text-center">
 					<ul class="fh5co-social">
 						<!-- <li><a href="#"><i class="icon-envelope"></i></a></li> -->
+						<li><a href="mailto:kukikeita@gmail.com"><i class="icon-envelope"></i></a></li>
 						<li><a href="https://twitter.com/keitakuki"><i class="icon-twitter"></i></a></li>
 						<li><a href="https://www.instagram.com/keita.cookie/"><i class="icon-instagram"></i></a></li>
 						<li><a href="https://github.com/Keita-Kuki"><i class="icon-github"></i></a></li>
