--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center">
 					<ul class="fh5co-social">
-						<!-- <li><a href="#"><i class="icon-envelope"></i></a></li> -->
+						<!-- <h2>Contact</h2> -->
 						<li><a href="mailto:kukikeita@gmail.com"><i class="icon-envelope"></i></a></li>
 						<li><a href="https://twitter.com/keitakuki"><i class="icon-twitter"></i></a></li>
 						<li><a href="https://www.instagram.com/keita.cookie/"><i class="icon-instagram"></i></a></li>
