--- a/index.html
+++ b/index.html
@@ -28,15 +28,16 @@
 	 -->
 
   	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
+	<meta property="og:title" content="Keita Kuki portfolio" />
+	<meta property="og:image" content="images/profile_img.png" />
+	<meta property="og:url" content="https://keita-kuki.github.io/portfolio/" />
+	<meta property="og:site_name" content="Keita Kuki portfolio"/>
+	<meta property="og:description" content="Graduate student of the University of Tokyo" />
+	<meta name="twitter:title" content="Keita Kuki portfolio" />
+	<meta name="twitter:image" content="images/profile_img.png" />
+	<meta name="twitter:url" content="https://keita-kuki.github.io/portfolio/" />
+	<meta name="twitter:site" content="@keitakuki" />
+	<meta name="twitter:card" content="summary" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
