--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="Keita Kuki portfolio" />
-	<meta property="og:image" content="images/profile_img.png" />
+	<meta property="og:image" content="https://keita-kuki.github.io/portfolio/images/profile_img.png" />
 	<meta property="og:url" content="https://keita-kuki.github.io/portfolio/" />
 	<meta property="og:site_name" content="Keita Kuki portfolio"/>
 	<meta property="og:description" content="Graduate student of the University of Tokyo" />
 	<meta name="twitter:title" content="Keita Kuki portfolio" />
-	<meta name="twitter:image" content="images/profile_img.png" />
+	<meta name="twitter:image" content="https://keita-kuki.github.io/portfolio/images/profile_img.png" />
 	<meta name="twitter:url" content="https://keita-kuki.github.io/portfolio/" />
 	<meta name="twitter:site" content="@keitakuki" />
 	<meta name="twitter:card" content="summary" />
