--- a/index.html
+++ b/index.html
@@ -537,6 +537,9 @@
 							<div class="chart" data-percent="95"><span><strong>Python</strong>95%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
+							<div class="chart" data-percent="85"><span><strong>Machine Learning</strong>85%</span></div>
+						</div>
+						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
 							<div class="chart" data-percent="90"><span><strong>Processing</strong>90%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
@@ -550,6 +553,9 @@
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
 							<div class="chart" data-percent="95"><span><strong>Drawing</strong>95%</span></div>
+						</div>
+						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
+							<div class="chart" data-percent="90"><span><strong>Teaching</strong>90%</span></div>
 						</div>
 					</div>
 				</div>
