--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							</figure>
 							<h1>Keita Kuki</h1>
 							<p>
-								Born in Tokyo, Japan<br>
+								Enginner<br>
 								Graduate student of the University of Tokyo<br>
 								Majoring: Interdisciplinary Information
 							</p>
