--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 	<![endif]-->
 
 	</head>
+	<img src="images/bg_img.jpg" hidden="true">
 	<body style="background-image: url(images/bg_img.jpg);">
 	
 	<div id="fh5co-main">
