modify education tab

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
 								<div class="fh5co-text">
 									<h2>2018-present</h2>
 									<p>
-										<a href="http://www.nae-lab.org/">Naemura Lab</a><br>
+										Naemura Lab<br>
 										Emerging Design and Informatics Course<br>
 										Graduate School of Interdisciplinary Information Studies<br>
 										The University of Tokyo<br>
