modify progile tab

--- a/index.html
+++ b/index.html
@@ -84,9 +84,12 @@
 							</figure>
 							<h1>Keita Kuki</h1>
 							<p>
-								Enginner<br>
 								Graduate student of the University of Tokyo<br>
 								Majoring: Interdisciplinary Information
+							</p>
+							<p>
+								Enginner<br>
+								iOS App, API server, DB management, log tracking
 							</p>
 							<p>
 								Interest<br>
