--- a/index.html
+++ b/index.html
@@ -571,11 +571,11 @@
 					<ul class="fh5co-social">
 						<!-- <h2>Contact</h2> -->
 						<li><a href="mailto:kukikeita@gmail.com"><i class="icon-envelope"></i></a></li>
-						<li><a href="https://twitter.com/keitakuki"><i class="icon-twitter"></i></a></li>
-						<li><a href="https://www.instagram.com/keita.cookie/"><i class="icon-instagram"></i></a></li>
-						<li><a href="https://github.com/Keita-Kuki"><i class="icon-github"></i></a></li>
-						<!-- <li><a href="#"><i class="icon-google"></i></a></li> -->
-						<!-- <li><a href="#"><i class="icon-linkedin"></i></a></li> -->
+						<li><a href="https://twitter.com/keitakuki" target="_blank"><i class="icon-twitter"></i></a></li>
+						<li><a href="https://www.instagram.com/keita.cookie/" target="_blank"><i class="icon-instagram"></i></a></li>
+						<li><a href="https://github.com/Keita-Kuki" target="_blank"><i class="icon-github"></i></a></li>
+						<!-- <li><a href="#" target="_blank"><i class="icon-google"></i></a></li> -->
+						<!-- <li><a href="#" target="_blank"><i class="icon-linkedin"></i></a></li> -->
 					</ul>
 					<small>
 						&copy; 2016 Personal Free HTML5 Template. All Rights Reserved. <span class="fh5co-author">
