--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 									<img src="images/works/kinect_processing/particles.png" alt="particles">
 									<span class="overlay">
 										<h2>Interative art of body movement</h2>
-										<span>by Kinect and Processing</span>
+										<span>kinectによる身体運動の抽象表現</span>
 									</span>
 								</a>
 
@@ -219,6 +219,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<h2>Interative art of body movement</h2>
+							<p>kinectによる身体運動の抽象表現</p>
 							
 							<div class="fh5co-gallery ">
 								<div class="iframe-wrap">
