--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 							</p>
 							<p>
 								Interest<br>
-								Fashion, Drawing, Codeing, Media Art, Machine Learning, HCI
+								Fashion, Drawing, Coding, Media Art, Machine Learning, HCI
 							</p>
 						</div>
 					</div>
