--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
 			</div>
 
 			<!-- skills -->
-			<div class="fh5co-tab-content" data-content="skills">
+			<!-- <div class="fh5co-tab-content" data-content="skills">
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
@@ -564,7 +564,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 		</div>
 		<footer id="fh5co-footer">
 			<div class="row">
