remove skill tab

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<li><a href="#" data-tab="works"><span class="icon icon-codepen"></span><span class="menu-text">Works</span></a></li>
 				<li><a href="#" data-tab="education"><span class="icon icon-graduation-cap"></span><span class="menu-text">Education</span></a></li>
 				<li><a href="#" data-tab="experience"><span class="icon icon-black-tie"></span><span class="menu-text">Experience</span></a></li>
-				<li><a href="#" data-tab="skills" data-pie="yes"><span class="icon icon-keyboard-o"></span><span class="menu-text">Skills</span></a></li>
+				<!-- <li><a href="#" data-tab="skills" data-pie="yes"><span class="icon icon-keyboard-o"></span><span class="menu-text">Skills</span></a></li> -->
 			</ul>
 
 			<!-- profile -->
