--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<meta property="og:image" content="https://keita-kuki.github.io/portfolio/images/profile_img.png" />
 	<meta property="og:url" content="https://keita-kuki.github.io/portfolio/" />
 	<meta property="og:site_name" content="Keita Kuki portfolio"/>
-	<meta property="og:description" content="Graduate student of the University of Tokyo" />
+	<meta property="og:description" content="Graduate student at the University of Tokyo" />
 	<meta name="twitter:title" content="Keita Kuki portfolio" />
 	<meta name="twitter:image" content="https://keita-kuki.github.io/portfolio/images/profile_img.png" />
 	<meta name="twitter:url" content="https://keita-kuki.github.io/portfolio/" />
@@ -84,7 +84,7 @@
 							</figure>
 							<h1>Keita Kuki</h1>
 							<p>
-								Graduate student of the University of Tokyo<br>
+								Graduate student at the University of Tokyo<br>
 								Majoring: Interdisciplinary Information
 							</p>
 							<p>
