--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Keita KUKI</title>
+	<title>Keita KUKI | 九鬼 慧太</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -82,7 +82,8 @@
 							<figure>
 								<img src="images/profile_img.png" alt="profile_img" width="80%">
 							</figure>
-							<h1>Keita Kuki</h1>
+							<h1>Keita KUKI</h1>
+							<p>九鬼 慧太</p>
 							<p>
 								Graduate student at the University of Tokyo<br>
 								Majoring: Interdisciplinary Information
