--- a/index.html
+++ b/index.html
@@ -98,15 +98,6 @@
 							</p>
 						</div>
 					</div>
-					<!-- <div class="row">
-						<div class="col-md-12 fh5co-counter">
-							<div class="fh5co-number fh5co-left">10</div>
-							<div class="fh5co-text">
-								<h3 class="border-bottom">Years of experience in Web Design</h3>
-								<p>Far far away, behind the word mountains, far from the countries.</p>
-							</div>
-						</div>
-					</div> -->
 				</div>
 			</div>
 
@@ -587,6 +578,33 @@
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
+
+							<div class="fh5co-feature">
+								<div class="fh5co-icon">
+									<i class="icon-black-tie"></i>
+								</div>
+								<div class="fh5co-text">
+									<h2>2018-present</h2>
+									<h3>teamLab</h3>
+									<p>
+										Interactive Engineer<br>
+										Unity, Houdini<br>
+									</p>
+								</div>
+							</div>
+
+							<div class="fh5co-feature">
+								<div class="fh5co-icon">
+									<i class="icon-black-tie"></i>
+								</div>
+								<div class="fh5co-text">
+									<h2>2018 summer</h2>
+									<h3>Recruit Internship</h3>
+									<p>
+										Data Scientist
+									</p>
+								</div>
+							</div>
 
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
