rename autonmous shadow

--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
 								<a class="gallery-item" data-tab="autonomous_shadow" href="#">
 									<img src="images/works/autonomous_shadow/autonomous_shadow.jpg" alt="autonomous_shadow">
 									<span class="overlay">
-										<h2>自律する影</h2>
+										<h2>Autonomous Shadow</h2>
+										<span>自律する影</span>
 										<span>東京大学制作展 2018 Dest-logy REBUILD</span>
 									</span>
 								</a>
@@ -226,7 +227,8 @@
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<h2>自律する影</h2>
+							<h2>Autonomous Shadow</h2>
+							<p>自律する影</p>
 							<p>東京大学制作展 2018 Dest-logy REBUILD</p>
 
 							<div class="fh5co-gallery">
